[package]
name = "buffering_nocopy_macro"
version = "0.2.0"
authors = ["John Baublitz <john.m.baublitz@gmail.com>"]
description = "A proc-macro crate for buffering"
license = "BSD-3-Clause"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = {version = "1.0", features = ["full", "extra-traits"]}
